WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158681
std::atexit used without including cstdlib
https://bugs.webkit.org/show_bug.cgi?id=158681
Summary
std::atexit used without including cstdlib
Ting-Wei Lan
Reported
2016-06-12 19:38:52 PDT
This causes compilation error on FreeBSD: /home/lantw44/webkit/source/WebKit/Source/WebCore/platform/graphics/PlatformDisplay.cpp:169:5: error: no member named 'atexit' in namespace 'std'; did you mean simply 'atexit'? std::atexit([] { PlatformDisplay::sharedDisplay().terminateEGLDisplay(); }); ^~~~~~~~~~~ atexit /usr/include/stdlib.h:84:6: note: 'atexit' declared here int atexit(void (*)(void)); ^ 1 error generated.
Attachments
Patch
(1.10 KB, patch)
2016-06-12 19:40 PDT
,
Ting-Wei Lan
no flags
Details
Formatted Diff
Diff
Patch
(1.07 KB, patch)
2016-06-12 19:47 PDT
,
Ting-Wei Lan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ting-Wei Lan
Comment 1
2016-06-12 19:40:06 PDT
Created
attachment 281145
[details]
Patch
WebKit Commit Bot
Comment 2
2016-06-12 19:41:28 PDT
Attachment 281145
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Ting-Wei Lan
Comment 3
2016-06-12 19:47:02 PDT
Created
attachment 281146
[details]
Patch
Brent Fulgham
Comment 4
2016-06-16 15:41:04 PDT
Comment on
attachment 281146
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=281146&action=review
> Source/WebCore/platform/graphics/PlatformDisplay.cpp:29 > +#include <cstdlib>
Was this causing a build error for you?
Brent Fulgham
Comment 5
2016-06-16 15:41:33 PDT
Comment on
attachment 281146
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=281146&action=review
r=me
>> Source/WebCore/platform/graphics/PlatformDisplay.cpp:29 >> +#include <cstdlib> > > Was this causing a build error for you?
Oh -- for BSD builds. Ok.
WebKit Commit Bot
Comment 6
2016-06-16 16:03:01 PDT
Comment on
attachment 281146
[details]
Patch Clearing flags on attachment: 281146 Committed
r202145
: <
http://trac.webkit.org/changeset/202145
>
WebKit Commit Bot
Comment 7
2016-06-16 16:03:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug