Include cstdlib before using std::atexit https://bugs.webkit.org/show_bug.cgi?id=158681

Patch by Ting-Wei Lan <lantw44@gmail.com> on 2016-06-16
Reviewed by Brent Fulgham.

* platform/graphics/PlatformDisplay.cpp:

Canonical link: https://commits.webkit.org/176923@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202145 268f45cc-cd09-0410-ab3c-d52691b4dbfc